--- a/src/components/Banner/banner.css
+++ b/src/components/Banner/banner.css
@@ -14,7 +14,8 @@
 	width: 300%;
 	overflow: scroll;
 	transition: transform .3s ease-in-out;
-	transform: translateX(-30px);
+	/*相当于滑动一张卡片！*/
+	/* transform: translateX(-33.33%); */
 }
 
 
@@ -22,5 +23,5 @@
 	width: 33.33%;
 	display: block;
 	height: 250px;
-	float: left;;
+	float: left;
 }
